--- a/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
@@ -8,10 +8,25 @@
 </head>
 <body>
 	 <div th:include="common/header.html"></div>
+	<!-- <p th:text="${#authentication.name}"></p> -->
+	해당 사용자 권한: <span th:text="${#authentication.authorities}"></span>
+	<!-- <p th:text="${#authentication.authenticated}"></p> -->
+	 <br>
 	 
 	<button onclick="location.href='/admin/select/retireN'">전체 인원 조회</button>
 	<button onclick="location.href='/admin/hr/regist/EmployeePage'">직원 등록(hr)</button>
 	
+	
+	
+	<button onclick="location.href='/admin/select/blackList'">블랙리스트 조회</button>
+	
+	<button type="button" id="myVacationList">나의 휴가 조회(직원)</button>
+	      <div style="display: none;" id="myVacation" sec:authentication="principal.adminNo"></div>
+	
+	<th:black sec:authorize="hasRole('ROLE_ADMIN_HR')">
+	<button onclick="location.href='/admin/hr/select/selectAllVacation'">휴가 전체 조회</button>
+	
+	</th:black>
 	<div sec:authorize="hasRole('ROLE_ADMIN_HR')">
 	<th:block sec:authorize="!hasRole('ROLE_ADMIN_BOSS')">
 		<button>(hr)</button>
@@ -20,17 +35,8 @@
 	<th:block sec:authorize="hasRole('ROLE_ADMIN_BOSS')">
 		<button>(boss)</button>
 	</th:block>
-	
 	</div>
-	<button onclick="location.href='/admin/select/blackList'">블랙리스트 조회</button>
 	
-	<button type="button" id="myVacationList">나의 휴가 조회(직원)</button>
-	      <div style="display: none;" id="myVacation" sec:authentication="principal.adminNo"></div>
-	
-	<button onclick="location.href='/admin/hr/select/selectAllVacation'">휴가 전체 조회</button>
-
-	
-	 <br>
 	 <br>
 	 <hr>
 	 <br>
