--- a/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/retireNPaging.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/retireNPaging.html
@@ -16,7 +16,7 @@
 				</li>
 
 				<li th:if="${start > 1}"><a
-					th:href="@{/admin/select/retireN?(page=${start - maxPage})}"
+					th:href="@{/admin/select/retireN?(page=${start - maxPage}-1)}"
 					th:text="'<'"></a></li>
 
 
@@ -26,7 +26,7 @@
 				</li>
 
 				<li th:if="${end < pages.totalPages}"><a
-					th:href="@{/admin/select/retireN?(page=${start + maxPage})}"
+					th:href="@{/admin/select/retireN?(page=${start + maxPage}-1)}"
 					th:text="'>'"></a></li>
 
 				<li th:if="${end < pages.totalPages}"><a
