--- a/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectAllEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectAllEmployee.html
@@ -26,19 +26,49 @@ body {
 
 		<!-- 직원 내용 -->
 		<div id="tab-1" class="tab-content current">
+		
+		
+		
+
+
+
+
+
+
+
+
+
+
+		
+		<!-- 재직자 검색 -->
+		<form action="/admin/select/retireN">
+		<span id="retireNSearch">
 			<span>인사관리 카드조회</span> <select name="category" id="category">
 				<option value="empNo" selected>사원번호</option>
 				<option value="empName">이름</option>
 				<option value="empBirth">생년월일</option>
 				<option value="empAddress">주소</option>
 				<option value="empPhone">전화번호</option>
-			</select> <input type="text" name="categoryValue">
+			</select> <input type="text" name="categoryValue" placeholder="재직자 검색">
+			<button type="submit" id="search">검색</button>
+		</span>
+		</form>
+		<!-- 퇴사자 검색 -->
+		<span id="retireYSearch">	
+			<span>인사관리 카드조회</span> <select name="category" id="category">
+				<option value="empNo" selected>사원번호</option>
+				<option value="empName">이름</option>
+				<option value="empBirth">생년월일</option>
+				<option value="empAddress">주소</option>
+				<option value="empPhone">전화번호</option>
+			</select> <input type="text" name="categoryValue" placeholder="퇴사자 검색">
 			<button type="button" id="search">검색</button>
-			
+		</span>	
+		
+		
 			<input type="radio" value="admin" name="retire" id="retireNEmployee">
 			<label for="retireNEmployee">재직자</label> 
 			<input type="radio" value="admin" name="retire" id="retireYEmployee"> <label for="retireYEmployee">퇴사자</label>
-
 			<table id="employeeList" border="1">
 				<thead>
 					<tr>
@@ -69,27 +99,13 @@ body {
 						<!-- <div> <input id="inputMainTain" th:value="${mainTain}"></div> -->
 		</div>
 		
-		<script th:inline="javascript">
-		    /*<![CDATA[*/
-			$(function(){
-				const mainTain = /*[[${mainTain}]]*/;			
-			if(mainTain == 'N'){
-				$("#retireNEmployee").attr("checked","true")
-				$('#entireN').show();
-				$('#entireY').hide();
-			}else if(mainTain == 'Y'){
-				$("#retireYEmployee").attr("checked","true")
-				$('#entireN').hide();
-				$('#entireY').show();
-			}
-			hover();
-			})
-		    /*]]>*/
-		</script>
+		
+
 
 
 	<script>
-
+	
+		
 		/* hover event */
 		function hover() {
 			const employee = document.getElementsByTagName("td");
@@ -109,43 +125,11 @@ body {
 				}
 			}
 		};
-
 		
-
-		/* 검색기능 list 출력 */
-		$("#search").click(function() {
-			$.ajax({
-				url : "gson1",
-				success : function(data) {
-
-					const $table = $("#employeeList tbody");
-					$table.html("");
-
-					for ( var index in data) {
-						$tr = $("<tr>");
-						$noTd = $("<td>").text(data[index].no);
-						$nameTd = $("<td>").text(data[index].name);
-						$ageTd = $("<td>").text(data[index].age);
-						$enrollDateTd = $("<td>").text(data[index].enrollDate);
-						$unknown1 = $("<td>").text(data[index].enrollDate);
-						$unknown2 = $("<td>").text(data[index].enrollDate);
-
-						$tr.append($noTd);
-						$tr.append($nameTd);
-						$tr.append($ageTd);
-						$tr.append($enrollDateTd);
-						$tr.append($unknown1);
-						$tr.append($unknown2);
-
-						$table.append($tr);
-					}
-				},
-				error : function(error) {
-					console.log(error);
-				}
-			});
-		});
-
+		
+		
+		
+		
 		/* 재직자 list ajax */
 		
 		$("#retireNEmployee").click(function() {
@@ -240,6 +224,29 @@ body {
 						}); 
 		  */
 	</script>
+	
+			<!-- 페이징 처리 -->
+		<script th:inline="javascript">
+		    /*<![CDATA[*/
+			$(function(){
+				const mainTain = /*[[${mainTain}]]*/;			
+			if(mainTain == 'N'){
+				$("#retireNEmployee").attr("checked","true")
+				$('#entireN').show();
+				$('#retireNSearch').show();
+				$('#entireY').hide();
+				$('#retireYSearch').hide();
+			}else if(mainTain == 'Y'){
+				$("#retireYEmployee").attr("checked","true")
+				$('#entireN').hide();
+				$('#retireNSearch').hide();
+				$('#entireY').show();
+				$('#retireYSearch').show();
+			}
+			hover();
+			})
+		    /*]]>*/
+		</script>
 </body>
 
 </html>
