--- a/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectMyVacationPaging.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectMyVacationPaging.html
@@ -16,7 +16,7 @@
 					th:href="@{/admin/select/selectMyVacation?(adminNo=${vacation[0].adminNo}, page=0)}" th:text="'<<'"></a></li>
 
 				<li th:if="${start > 1}"><a
-					th:href="@{/admin/select/selectMyVacation?(adminNo=${vacation[0].adminNo}, page=${start - maxPage})}"
+					th:href="@{/admin/select/selectMyVacation?(adminNo=${vacation[0].adminNo}, page=${start - maxPage}-1)}"
 					th:text="'<'"></a></li>
 
 
@@ -25,7 +25,7 @@
 					th:text="${page}"></a></li>
 
 				<li th:if="${end < pages.totalPages}"><a
-					th:href="@{/admin/select/selectMyVacation?(adminNo=${vacation[0].adminNo}, page=${start + maxPage})}"
+					th:href="@{/admin/select/selectMyVacation?(adminNo=${vacation[0].adminNo}, page=${start + maxPage}-1)}"
 					th:text="'>'"></a></li>
 
 				<li th:if="${end < pages.totalPages}"><a
