--- a/com-project-clean/src/main/resources/templates/pay/adminPaySelect.html
+++ b/com-project-clean/src/main/resources/templates/pay/adminPaySelect.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<div th:include="common/header.html"></div>
-	<div th:include="common/taskAside.html"></div>
+	<div th:include="common/payAside.html"></div>
 	<section>
 		
 		<table border="1">
