--- a/com-project-clean/src/main/resources/templates/pay/surcharge.html
+++ b/com-project-clean/src/main/resources/templates/pay/surcharge.html
@@ -41,7 +41,7 @@
 		
 	</script>
 	<div th:include="common/header.html"></div>
-	<div th:include="common/taskAside.html"></div>
+	<div th:include="common/payAside.html"></div>
 	<section>
 	    <h2>현재 부가요금</h2>
 	    <table id="surchargeTable" border="1">
