--- a/com-project-clean/src/main/resources/templates/pay/employeePaySelectInfo.html
+++ b/com-project-clean/src/main/resources/templates/pay/employeePaySelectInfo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div th:include="common/header.html"></div>
-	<div th:include="common/taskAside.html"></div>
+	<div th:include="common/payAside.html"></div>
 	<section>
 		<table>
 	        <tr>
