--- a/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
@@ -25,6 +25,7 @@
 	<button onclick="location.href='/admin/select/blackList'">블랙리스트 조회</button>
 	<button onclick="location.href='/admin/select/selectMyVacationDetail'">나의 휴가 조회</button>
 	<button onclick="location.href='/admin/hr/select/Allvacation'">휴가 전체 조회</button>
+	
 	 <br>
 	 <br>
 	 <hr>
@@ -38,7 +39,10 @@
 		
 		<input value="관리자 조회" type="button" onclick="location.href='/admin/hrCard/adminList'">
 		<input value="관리자 등록" type="button" onclick="location.href='/admin/hrCard/adminRegist'">
-		<input value="휴가 대기 목록" type="button" onclick="location.href='/admin/vacation/standbyVacationList'">
+		<input value="1차 휴가 대기 목록" type="button" onclick="location.href='/admin/vacation/standbyFirstVacationList'">
+		<input value="2차 휴가 대기 목록" type="button" onclick="location.href='/admin/vacation/standbySecondVacationList'">
+		<input value="휴가 신청" type="button" onclick="location.href='/admin/vacation/registVacation'">
+	
 	 <!-- <div th:include="admin/adminAside.html"></div> -->
 	 
 </body>
