--- a/com-project-clean/src/main/resources/templates/admin/hrCard/adminDetail.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/adminDetail.html
@@ -56,8 +56,9 @@
 		        <td>이름</td>
 		        <td th:text="${ admin.adminName }"></td>
 		        <th:block th:if="${admin.adminPictureSaveName}">
-				    <td colspan="2" rowspan="3"><img width="100" height="120" 
-			        	th:src="@{static/adminPicture/thumbnail/} + ${admin.adminPictureSaveName}"/>
+				   <td colspan="2" rowspan="3">
+				   	<img width="100" height="120" 
+			        	th:src="${ admin.getAdminPictureSaveRoot() + '/' + admin.getAdminPictureSaveName() }"/>
 			        </td>
 				</th:block>
 		      </tr>
@@ -140,7 +141,6 @@
 	   	 		<td style="display: none" id="value" th:text="${admin.adminNo}" ></td>
 	   	 	</tr>
 	     </table>
-	     <a href="" th:href="@{/admin/hrCard/adminModifySelf/Delete/${admin.adminNo}}">퇴사</a>
     </form>
     
  
