--- a/com-project-clean/src/main/resources/templates/common/chatt.html
+++ b/com-project-clean/src/main/resources/templates/common/chatt.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org"
-	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Project Clean</title>
@@ -13,10 +12,10 @@
         <h1 class="title">닉네임을 입력하세요</h1>
         <form id="usernameForm" name="usernameForm">
             <div class="form-group">
-                <input type="text" id="username" placeholder="Username" autocomplete="off" class="form-control" />
+                <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control" />
             </div>
             <div class="form-group">
-                <button type="submit" class="accent username-submit" value="userName">채팅 시작하기</button>
+                <button type="submit" class="accent username-submit">채팅 시작하기</button>
             </div>
         </form>
     </div>
