--- a/com-project-clean/src/main/resources/templates/employee/checkList/insertCheckList.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/insertCheckList.html
@@ -11,11 +11,15 @@
     	th:href="@{/css/employee/checklist/checkList.css}">
    	<script 
    		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script 
-    	src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
     <link 
     	rel="stylesheet" type="text/css"
     	th:href="@{/css/employee/checklist/checkList.css}">
+    <script 
+    	src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
+	<script 
+		src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+	<script 
+		src="/js/socket.js"></script>
 </head>
 
 <body>
@@ -60,14 +64,6 @@
 	<br><br><br><br>    	
 	<input type="button" id="submitButton" value="제출" class="submittbtn" >	  
 	
-	<form id="messageForm" name="messageForm">
-		<div class="form-group">
-			<div class="input-group clearfix">
-   				<input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
-      	 		<button type="submit">보내기</button>
-   			</div> 	
-		</div>
-    </form>
     
 	<!-- submit script -->
     <script>
@@ -238,12 +234,5 @@
 							
 	};			
 	</script>
-	
 </body>
-	<script 
-		src='/js/mainSocket.js'></script>
-	<script 
-		src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
-	<script 
-		src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>	
 </html>
