2022/07/19 02:36 proceed paging and search function

--- a/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
@@ -12,8 +12,8 @@
 	해당 사용자 권한: <span th:text="${#authentication.authorities}"></span>
 	<!-- <p th:text="${#authentication.authenticated}"></p> -->
 	 <br>
-	 
-	<button onclick="location.href='/admin/select/retireN'">전체 인원 조회</button>
+	  <button onclick="location.href='/admin/select/AllEmployee/move'">전체 인원 조회</button>
+	<!-- <button onclick="location.href='/admin/select/retireN'">전체 인원 조회</button> -->
 	<button onclick="location.href='/admin/hr/regist/EmployeePage'">직원 등록(hr)</button>
 	
 	
