--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/waitingEmployeeListHR.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/waitingEmployeeListHR.html
@@ -50,40 +50,35 @@
         <div id="tab-2" class="tab-content">
 		<form name="waitingForm" action="" id="waitForm">
 			<span>대기인원 조회</span> 
-			
-			
-			
-			
 			<select name="category" id="category">
 				<option value="all" selected>전체</option>
 				<option value="no">사원번호</option>
 				<option value="name">이름</option>
+				<option value="address">주소</option>
 				<option value="phone">전화번호</option>
 			</select> 
 			<input type="text" name="categoryValue" placeholder="대기인원 조회">
 			<input type="text" style="display: none;"> <!-- enter - submit 방지 -->
 			
-			<button type="button" id="searchN" onclick="returnAjax();">검색</button>
+			<button type="button" id="searchN" onclick="waitingAjax();">검색</button>
 			<input type="hidden" value="0" name=page>
 		</form>
 		
-            <table id="returnEmployeeList" border="1">
+            <table id="employeeList" border="1">
                 <thead>
-                    <tr>
-                        <th>사원번호</th>
-                        <th>이름</th>
-                        <th>생년월일</th>
-                        <th>전화번호</th>
-                        <th>1차 반려 여부</th>
-                        <th>2차 반려 여부</th>
-                        <th>최종 반려 여부</th>
-                    </tr>
+					<tr>
+						<th>사원번호</th>
+						<th>이름</th>
+						<th>생년월일</th>
+						<th>주소</th>
+						<th>전화번호</th>
+						<th>성별</th>
+					</tr>
                 </thead>
                 <tbody>
-
+                	
                 </tbody>
             </table>
-
 	            <div id="paging" style="display: flex; justify-content: center;">
 	            <!-- /* 페이징 버튼들어올 공간 */ -->
 				</div>
@@ -97,36 +92,37 @@
 	  
 
      $(document).ready(function(){
-   	  returnAjax();
+   	  waitingAjax();
      });
      
      /* 페이징 버튼을 통한 요청 함수 */
-     function returnPage(category, categoryValue, page){
+     function waitingPage(category, categoryValue, page){
         console.log("ajax page이동 실행 시도");
         var queryString = {"category" : category
                      , "categoryValue" : categoryValue
                      , "page" : page};
-        returnAjaxFunction(queryString);
+        waitingAjaxFunction(queryString);
      }
      
      
      /* 유저가 조건 선택해 검색하는 요청 함수 */
-     function returnAjax(){
+     function waitingAjax(){
         console.log("ajax 기본함수 실행 시도");
 			
         var queryString = $("form[name=waitingForm]").serialize();
-        returnAjaxFunction(queryString);
+        waitingAjaxFunction(queryString);
      }
      
      
 	  /* 승인 대기중 ajax */
-     function returnAjaxFunction(queryString){
+     function waitingAjaxFunction(queryString){
         $.ajax({
-           url : "/admin/hr/return/employee",
+           url : "/admin/hr/waiting/employeeHR",
            data : queryString,
            success : function(data){
-              const $table = $("#returnEmployeeList tbody");
+              const $table = $("#employeeList tbody");
               const $div = $("#paging");
+  			   const mainTain = data.mainTain;
               
               /* 데이터 필드, 페이징버튼 필드 초기화 */
               $table.html("");
@@ -135,23 +131,21 @@
               category=data.category;
               categoryValue=data.categoryValue;
               
-				for ( var index in data.returnEmployeeList) {
+				for ( var index in data.waitingList) {
 	                $tr = $("<tr>");   
-					$noTd = $("<td>").text(data.returnEmployeeList[index].employeeNo);
-					$nameTd = $("<td>").text(data.returnEmployeeList[index].employeeName);
-					$birthTd = $("<td>").text(data.returnEmployeeList[index].employeeBirth);
-					$phoneTd = $("<td>").text(data.returnEmployeeList[index].employeePhone);
-					$firstTd = $("<td>").text(data.returnEmployeeList[index].employeeFirstConfirmYn);
-					$secondTd = $("<td>").text(data.returnEmployeeList[index].employeeSecondConfirmYn);
-					$lastTd = $("<td>").text(data.returnEmployeeList[index].employeeLastConfirmYn);
+					$noTd = $("<td>").text(data.waitingList[index].employeeNo);
+					$nameTd = $("<td>").text(data.waitingList[index].employeeName);
+					$birthTd = $("<td>").text(data.waitingList[index].employeeBirth);
+					$addressTd = $("<td>").text(data.waitingList[index].employeeAddress);
+					$phoneTd = $("<td>").text(data.waitingList[index].employeePhone);
+					$hireDateTd = $("<td>").text(data.waitingList[index].employeeGender);
 
 							$tr.append($noTd);
 							$tr.append($nameTd);
 							$tr.append($birthTd);
+							$tr.append($addressTd);
 							$tr.append($phoneTd);
-							$tr.append($firstTd);
-							$tr.append($secondTd);
-							$tr.append($lastTd);
+							$tr.append($hireDateTd);
 
 							$table.append($tr);
 
@@ -171,13 +165,13 @@
                  $button = $("<button class='page' disabled><<</button>");
                  $div.append($button);
               } else {
-                 $button = $("<button class='page' id='goBackPage' onclick='returnPage(category,categoryValue,"+$beforeStartPage+")'><<</button>");
+                 $button = $("<button class='page' id='goBackPage' onclick='waitingPage(category,categoryValue,"+$beforeStartPage+")'><<</button>");
                  $div.append($button);
               }
               
               for(i=$startPage;i<$endPage;i++){
                  if(i!=$currentPage){
-                    $button = $("<button class='page' onclick='returnPage(category,categoryValue,"+(i)+")'>"+(i+1)+"</button>");   
+                    $button = $("<button class='page' onclick='waitingPage(category,categoryValue,"+(i)+")'>"+(i+1)+"</button>");   
                  } else {
                     $button = $("<button disabled class='page'>"+(i+1)+"</button>");
                  }
@@ -189,7 +183,7 @@
                  $button = $("<button class='page' disabled>>></button>");
                  $div.append($button);
               } else {
-                 $button = $("<button class='page' id='goForwardPage' onclick='returnPage(category,categoryValue,"+$afterEndPage+")'>>></button>");
+                 $button = $("<button class='page' id='goForwardPage' onclick='waitingPage(category,categoryValue,"+$afterEndPage+")'>>></button>");
                  $div.append($button);
               }
               
@@ -216,9 +210,8 @@
 					this.parentNode.style.backgroundColor = "white";
 				}
 
-            	employee[i].onclick = function(){
-                    location.href="/admin/select/returnDetail/" + this.parentNode.children[0].innerText;
-                
+				employee[i].onclick = function() {
+	                    location.href="/admin/select/waitingDetail/" + this.parentNode.children[0].innerText;
 				}
 			}
 		};
