--- a/com-project-clean/src/main/resources/templates/employee/checkList/selectBlackCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/selectBlackCheckListDetails.html
@@ -12,9 +12,6 @@
 		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script 
 		src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
-	<script 
-	      src='/js/checklistCheckBox2.js'></script>
-
 </head>
 <body>
 
@@ -27,4 +24,11 @@
 </section>
 	
 </body>
+	<script 
+		src="/js/socket.js"></script>
+	<script
+		src="http://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+   	<script 
+		src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+
 </html>
