--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -6,10 +6,11 @@
 <title>Project Clean</title>
     <link rel="stylesheet" 
     	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
-	<link 
-		rel="stylesheet" type="text/css" th:href="@{/css/common/commonLayout.css}" />
     <script 
     	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+	<link 
+		rel="stylesheet" type="text/css" 
+		th:href="@{/css/common/commonLayout.css}" />
 	<script
 		src="http://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
 	<script 
@@ -17,20 +18,30 @@
     <script 
     	src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script 
+   		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script 
     	src="/js/socket.js"></script>
     	
 </head>
 
 <body>
+        <div class="col-md-6">
+            <form class="form-inline">
+                <div class="form-group">
+                    <input type="text" id="sendingMessage" class="form-control">
+                </div>
+                <button id="send" class="btn btn-default" type="submit">Send</button>
+            </form>
+        </div>
     <div class="row">
         <div class="col-md-12">
             <table id="conversation" class="table table-striped">
                 <thead>
                 <tr>
-                    <th>메세지 : </th>
+                    <th>Message : </th>
                 </tr>
                 </thead>
-                <tbody id="greetings">
+                <tbody id="ReceiveMessage">
                 </tbody>
             </table>
         </div>
