--- a/com-project-clean/src/main/resources/templates/employee/checkList/insertCheckList.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/insertCheckList.html
@@ -9,17 +9,9 @@
     <link 
     	rel="stylesheet" type="text/css"
     	th:href="@{/css/employee/checklist/checkList.css}">
-   	<script 
-   		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link 
-    	rel="stylesheet" type="text/css"
-    	th:href="@{/css/employee/checklist/checkList.css}">
-    <script 
+ 	<script 
     	src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
-	<script 
-		src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-	<script 
-		src="/js/socket.js"></script>
+
 </head>
 
 <body>
@@ -235,4 +227,10 @@
 	};			
 	</script>
 </body>
+	<script 
+		src="/js/socket.js"></script>
+	<script
+		src="http://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+   	<script 
+		src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 </html>
