--- a/com-project-clean/src/main/resources/templates/employee/checkList/selectDenialCheckList.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/selectDenialCheckList.html
@@ -4,8 +4,6 @@
 <head>
 <meta charset="UTF-8">
 
-   	<script 
-   		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script 
     	src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <link 
@@ -100,4 +98,11 @@
    	</script>
    	
 </body>
+	<script 
+		src="/js/socket.js"></script>
+	<script
+		src="http://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+   	<script 
+		src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+
 </html>
