--- a/com-project-clean/src/main/resources/templates/employee/checkList/selectMyCheckList.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/selectMyCheckList.html
@@ -3,18 +3,18 @@
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="UTF-8">
-   	<script 
-   		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script 
-    	src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <link 
-    	rel="stylesheet" type="text/css"
-		th:href="@{/css/employee/checklist/checkListTable.css}">
-	<link 
-		rel="stylesheet" 
+	<link rel="stylesheet" 
     	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
     <script 
     	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link 
+    	rel="stylesheet" type="text/css"
+		th:href="@{/css/employee/checklist/checkListTable.css}">
+    <script 
+    	src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+   	<script 
+   		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+   	    
 <title>ProjectClean</title>
 </head>
 <body>
@@ -128,4 +128,11 @@
    	</script>
    	
 </body>
+<script 
+    	src="/js/socket.js"></script>	
+<script
+		src="http://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+<script 
+    	src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+    	
 </html>
