--- a/com-project-clean/src/main/resources/templates/pay/adminPayWaiting.html
+++ b/com-project-clean/src/main/resources/templates/pay/adminPayWaiting.html
@@ -16,14 +16,14 @@
 	<div th:include="common/payAside.html"></div>
 	<section>
 			<form action="/pay/adminPayWaiting" name="modifyForm" id="modifyForm" method="post">
-				<select name="adminList" id="adminList">
+				<select name="adminNo" id="adminNo">
 					<!-- ajax로 조회 -->
 				</select>
 				<input class="payButton" type="button" value="급여지급">
 			</form>
 		<div id="wrap" style="margin-top: 5px">
 			<div id="allAdminTable">
-			    <h2 align="center">모든 관리자 목록</h2>
+			    <h2 class="borderText" align="center">모든 관리자 목록</h2>
 				<table border="1">
 			        <tr>
 			           <th>이름</th> 
@@ -47,7 +47,7 @@
 		    	</table> 
 		   	</div>
 		   	<div id="paidAdminTable">
-				<h2 id="current_date" align="center"></h2>
+				<h2 class="borderText" id="current_date" align="center"></h2>
 				<table border="1">
 			        <tr>
 			           <th>이름</th> 
@@ -64,13 +64,14 @@
 	    </div>
 		<br clear="both">
 		<br>
-		<h2 align="center">급여를 한번도 받지 않은 신입사원</h2>
+		<h2 class="borderText" align="center">급여를 한번도 받지 않은 신입사원</h2>
 			<table border="1">
 		        <tr>
 		           <th>이름</th> 
 		           <th>직급</th> 
 		           <th>전화번호</th>
 		           <th>입사일</th>
+		           <th>계산 전 급여</th>
 		           <th>받을 최종 급여</th>
 		        </tr>
 		        <tr th:each="admin : ${ adminList }">
@@ -78,6 +79,7 @@
 		          <td th:text="${ admin.adminJob}"></td> 
 		          <td th:text="${ admin.adminPhone }"></td> 
 		          <td th:text="${ admin.adminHireDate }"></td> 
+		          <td th:text="${ admin.adminSalary }"></td> 
 	            <th:block th:if="${ insurance } > 10">
 			          <td id="beforePay" th:text="${ admin.adminSalary } - ${ admin.adminSalary } * ${ insurance } / 100"></td> 
 		        </th:block>
@@ -90,6 +92,18 @@
     </section>
 </body>
 <script>
+	// 급여 지급 성공시
+	const successMessage = "[[${ modifySuccessMessage }]]";
+	if(successMessage){
+		Swal.fire({
+			  position: 'mid',
+			  icon: 'success',
+			  title: '성공적으로 지급 되었습니다!',
+			  showConfirmButton: false,
+			  timer: 3000
+			})
+	}
+	
 	// 이번 달 가져오기
 	var now = new Date();	// 현재 날짜 및 시간
 	var month = now.getMonth() + 1;	// 월
@@ -100,7 +114,7 @@
 	
 	// select text 가져오기
 	var form = $('#modifyForm')
-	var adminName = document.getElementById('adminList');
+	var adminName = document.getElementById('adminNo');
   
 	// submit전에 confirm창 먼저 띄우기
 	$(".payButton").click(function(){
@@ -120,11 +134,11 @@
 			$.ajax({
 				url: "/pay/admin",
 				success: function(data){
-					const $adminList = $("#adminList");
-					$adminList.html("");
+					const $adminNo = $("#adminNo");
+					$adminNo.html("");
 					
 					for (let index in data){
-						$adminList.append($("<option>").val(data[index].adminNo).text(data[index].adminName))
+						$adminNo.append($("<option>").val(data[index].adminNo).text(data[index].adminName))
 					}
 				},
 				error: function(xhr){
