--- a/com-project-clean/src/main/resources/templates/pay/surcharge.html
+++ b/com-project-clean/src/main/resources/templates/pay/surcharge.html
@@ -14,8 +14,11 @@
 		const successMessage = "[[${ modifySuccessMessage }]]";
 		if(successMessage){
 			Swal.fire({
-				  title: '수정 성공!!',
-				  text: '부가요금 수정을 성공했습니다~',
+				  position: 'mid',
+				  icon: 'success',
+				  title: '성공적으로 수정 되었습니다!',
+				  showConfirmButton: false,
+				  timer: 3000
 				})
 		}
 		
