--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectAcceptCheckList.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectAcceptCheckList.html
@@ -35,7 +35,7 @@
 				<td width="100">예약 번호</td>
 				<td width="100">처리 상태</td>
 				<td width="100">고객 이름</td>
-				<td width="100">직원 이름</td>
+				<td width="100">직원 아이디</td>
 				<td width="100">담당자</td>
 				<td width="100">상세 보기</td>
 			</tr>
