--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckListDetails.html
@@ -4,12 +4,19 @@
 <head>
 <meta charset="UTF-8">
 <title>Project Clean</title>
-<link rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
-<link rel="stylesheet" type="text/css"
-	th:href="@{/css/employee/checklist/checkList.css}">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
+
+	<script 
+	    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+	<link 
+		rel="stylesheet"
+		href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
+	<link 
+		rel="stylesheet" type="text/css"
+		th:href="@{/css/employee/checklist/checkList.css}">
+	<script 
+		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script 
+		src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
 
 </head>
 <body>
@@ -24,11 +31,20 @@
 		<br><br>				
 	</form>
 </section>
+
 <div class="submitarea">
 	<input type="button" value="승인" id="accept">
 	&nbsp;&nbsp;&nbsp;&nbsp;
 	<input type="button" value="블랙+" id="denial">
 </div>
+
+<form hidden class="form-inline">
+    <div class="form-group">
+        <input type="text" id="sendingMessage" class="form-control">
+    </div>
+    <button id="send" class="btn btn-default" type="submit">Send</button>
+</form>
+
 <!-- textarea script -->
 <script>
 	
@@ -43,60 +59,83 @@
 </script>
 <!-- Submit script -->
     <script>
-	    
-	    const jbHtml = "";
-    	document.getElementById("denial").onclick = function(){
-			const reservationNo = $('.reservationNo').val();
-    		if(confirm("해당 직원에게 블랙리스트 경고 횟수를 추가하시겠습니까?")){
-    			
-    			const jbHtml = $( 'section' ).html();
-    			const blackYn = 2;
-    			
-    			$.ajax({
-    				url: "denial",
-    				type:"POST",
-    				data:{	
-    					jbHtml : jbHtml,
-    					reservationNo : reservationNo,
-    					blackYn : blackYn
-    				},
-    				
-    				success: function(data){
-		    			alert("전송 완료");
-		    			location.href="/admin/checklist/accept/select"
-    				},
-    				error : function(request, status){
-    					alert("전송 실패")
-    				}
-    			})
-    		 } 
-    	}
     	
-    	document.getElementById("accept").onclick = function(){
-			const reservationNo = $('.reservationNo').val();
-    		if(confirm("서류를 승인하시겠습니까? 직원에게 알람이 전송됩니다.")){
-
-    			const jbHtml = $( 'section' ).html();
-    			$.ajax({
-    				url: "accept",
-    				type:"POST",
-    				data:{	
-    					jbHtml : jbHtml,
-    					reservationNo : reservationNo
-    				},
-    				
-    				success: function(data){
-    					location.href="/admin/checklist/accept/select"
-		    			alert("전송 완료");
-						
-    				},
-    				error : function(request, status){
-    					alert("전송 실패")
-    				}
-    			})
-    		 } 
-    	}
+		    const jbHtml = "";
+	    	document.getElementById("denial").onclick = function(){
+				const reservationNo = $('.reservationNo').val();
+	    		
+				if(confirm("해당 직원에게 블랙리스트 경고 횟수를 추가하시겠습니까? /n 직원에게 알림이 전송됩니다.")){
+	    			
+	    			$("#sendingMessage").val("체크리스트가 재반려되었습니다. 블랙리스트 경고 횟수가 증가합니다.")
+	    			
+	    			$("#send").bind("click", function(){
+	    			});
+	    			
+	    			$("#send").trigger("click");
+	    			
+	    			const jbHtml = $( 'section' ).html();
+	    			const blackYn = 2;
+	    			
+	    			$.ajax({
+	    				url: "denial",
+	    				type:"POST",
+	    				data:{	
+	    					jbHtml : jbHtml,
+	    					reservationNo : reservationNo,
+	    					blackYn : blackYn
+	    				},
+	    				
+	    				success: function(data){
+			    			alert("전송 완료");
+			    			location.href="/admin/checklist/accept/select"
+	    				},
+	    				error : function(request, status){
+	    					alert("전송 실패")
+	    				}
+	    			})
+	    		 } 
+	    	}
+	    	
+	    	document.getElementById("accept").onclick = function(){
+				const reservationNo = $('.reservationNo').val();
+	    		if(confirm("서류를 승인하시겠습니까? 직원에게 알람이 전송됩니다.")){
+	
+	    			$("#sendingMessage").val("체크리스트가 승인되었습니다.")
+	    			
+	    			$("#send").bind("click", function(){
+	    			});
+	    			
+	    			$("#send").trigger("click");
+	    			
+	    			const jbHtml = $( 'section' ).html();
+	    			$.ajax({
+	    				url: "accept",
+	    				type:"POST",
+	    				data:{	
+	    					jbHtml : jbHtml,
+	    					reservationNo : reservationNo
+	    				},
+	    				
+	    				success: function(data){
+	    					location.href="/admin/checklist/accept/select"
+			    			alert("전송 완료");
+							
+	    				},
+	    				error : function(request, status){
+	    					alert("전송 실패")
+	    				}
+	    			})
+	    		 } 
+	    	}
 
     </script>	
 </body>
+
+	<script 
+		src="/js/socket.js"></script>
+	<script
+		src="http://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+   	<script 
+		src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+
 </html>
