--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectStandCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectStandCheckListDetails.html
@@ -5,22 +5,18 @@
 <meta charset="UTF-8">
 <title>Project Clean</title>
 
-	<link rel="stylesheet"
+    <script 
+    	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+	<link 
+		rel="stylesheet"
 		href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
-	<link rel="stylesheet" type="text/css"
+	<link 
+		rel="stylesheet" type="text/css"
 		th:href="@{/css/employee/checklist/checkList.css}">
 	<script 
 		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script 
 		src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
-    <script 
-    	src="/js/socket.js"></script>
-    <script 
-    	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-	<script
-		src="http://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
-    <script 
-    	src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 </head>
 <body>
 <section>
@@ -45,16 +41,17 @@
         
 	</form>
 </section>
+
 <br>
+
 <div class="submitarea">
 	<input type="button" value="승인" id="accept">
 	<input type="button" value="거절" id="denial">
 </div>
 
-<form class="form-inline">
+<form hidden class="form-inline">
     <div class="form-group">
-        <label for="name">What is your name?</label>
-        <input type="text" id="name" class="form-control" value="체크리스트가 반려되었습니다.">
+        <input type="text" id="sendingMessage" class="form-control">
     </div>
     <button id="send" class="btn btn-default" type="submit">Send</button>
 </form>
@@ -70,12 +67,13 @@
 </script>
 <!-- Submit script -->
     <script>
-	    
 	    const jbHtml = "";
     	document.getElementById("denial").onclick = function(){
 			const reservationNo = $('.reservationNo').val();
 			
-    		if(confirm("서류를 반려하시겠습니까? 직원에게 알람이 전송됩니다.")){
+    		if(confirm("서류를 반려하시겠습니까? 직원에게 알림이 전송됩니다.")){
+    			
+    			$("#sendingMessage").val("체크리스트가 반려되었습니다.")
     			$("#send").bind("click", function(){
     			});
     			
@@ -110,7 +108,14 @@
     		
 			const reservationNo = $('.reservationNo').val();
 			
-    		if(confirm("서류를 승인하시겠습니까? 직원에게 알람이 전송됩니다.")){
+    		if(confirm("서류를 승인하시겠습니까? 직원에게 알림이 전송됩니다.")){
+    			
+    			$("#sendingMessage").val("체크리스트가 승인되었습니다.")
+    			
+    			$("#send").bind("click", function(){
+    			});
+    			
+    			$("#send").trigger("click");
     			
     			document.getElementById("adminOpnion").remove();
     			document.getElementById("adminOpnion2").style="";
@@ -157,4 +162,10 @@
 </script>
 
 </body>
+	<script 
+		src="/js/socket.js"></script>
+	<script
+		src="http://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+   	<script 
+		src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 </html>
