--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -25,14 +25,6 @@
 </head>
 
 <body>
-        <div class="col-md-6">
-            <form class="form-inline">
-                <div class="form-group">
-                    <input type="text" id="sendingMessage" class="form-control">
-                </div>
-                <button id="send" class="btn btn-default" type="submit">Send</button>
-            </form>
-        </div>
     <div class="row">
         <div class="col-md-12">
             <table id="conversation" class="table table-striped">
@@ -46,6 +38,7 @@
             </table>
         </div>
     </div>
+    
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light ">
             <div class="container-fluid upnavvar">
@@ -72,12 +65,10 @@
                     </ul>
 
                     <th:block sec:authorize="hasRole('ADMIN')">			
-						<span id="name" hidden sec:authentication="principal.adminId"></span>
-						<h3><span sec:authentication="principal.adminName"></span></h3>
+						<h3><span sec:authentication="principal.adminName" id="adminName" th:value="principal.adminName"></span></h3>
 					</th:block>
                     <th:block sec:authorize="hasRole('EMPLOYEE')">			
-						<span id="name" hidden sec:authentication="principal.employeeId"></span>
-						<h3><span sec:authentication="principal.employeeName"></span></h3>
+						<h3><span sec:authentication="principal.employeeName" id="employeeName" th:value="principal.employeeName"></span></h3>
 					</th:block>
 
                     <ul class="navbar-nav me-auto mb-3 mb-lg-0">
@@ -92,6 +83,25 @@
             </div>
         </nav>
 
+	    <form hidden class="form-inline">
+	    	<div class="form-group">
+	    	<input type="text" id="sendingName" class="form-control">
+	    	</div>
+	    	<button id="send" class="btn btn-default" type="submit">Send</button>
+		</form>
+		
+		<script>
+		/* 
+			var test = $("#employeeId").text();
+			
+			$("#sendingName").val(test)
+			
+			$("#send").bind("click", function(){
+    		});
+    			
+    		$("#send").trigger("click");
+    		 */
+		</script>
         <nav class="navbar navbar-expand-lg navbar-light bg-light ">
             <div class="container-fluid downnavbar">
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
