2022/07/19 commit after paging and search function

--- a/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectAllEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectAllEmployee.html
@@ -30,7 +30,8 @@ body {
 		
 		<!-- 재직자 검색 -->
 		<form name="retireNForm" action="/admin/select/retireN" id="retireNSearch">
-			<span>인사관리 카드조회</span> <select name="category" id="category">
+			<span>인사관리 카드조회</span> 
+			<select name="category" id="category">
 				<option value="all" selected>전체</option>
 				<option value="no">사원번호</option>
 				<option value="name">이름</option>
