--- a/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
@@ -18,13 +18,17 @@
 	
 	
 	
-	<button onclick="location.href='/admin/select/blackList'">블랙리스트 조회</button>
+	<button onclick="location.href='/admin/select/blackList/move'">블랙리스트 조회</button>
 	
-	<button type="button" id="myVacationList">나의 휴가 조회(직원)</button>
-	      <div style="display: none;" id="myVacation" sec:authentication="principal.adminNo"></div>
+	
+	
+	
+<button onclick="location.href='/admin/select/selectMyVacation/move'">나의 휴가 조회</button>	
+	
+	
 	
 	<th:black sec:authorize="hasRole('ROLE_ADMIN_HR')">
-	<button onclick="location.href='/admin/hr/select/selectAllVacation'">휴가 전체 조회</button>
+	<button onclick="location.href='/admin/hr/humanResource/selectAllVacation/move'">휴가 전체 조회</button>
 	
 	</th:black>
 	<div sec:authorize="hasRole('ROLE_ADMIN_HR')">
@@ -52,13 +56,6 @@
 		<input value="휴가 대기 목록" type="button" onclick="location.href='/admin/vacation/standbyVacationList'">
 	 <!-- <div th:include="admin/adminAside.html"></div> -->
 	 
-	 <script>
-    	  const adminNoValue = $("#myVacation").text();
-      
-      $("#myVacationList").click(function(){
-    	  location.href="/admin/select/selectMyVacation?adminNo="+adminNoValue;
-      });
-	 </script>
 </body>
 </html>
 
