--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectStandCheckList.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectStandCheckList.html
@@ -92,7 +92,7 @@
 						const enNo2 = resNo1[i];
 						var enNo3 = resNo2.parentNode.querySelector('.en').innerText;
 						
- 					 	location.href="/admin/checklist/selectDetails?re="+resNo3;
+ 					 	location.href="/admin/checklist/selectDetails?re="+resNo3 +"&en=" + enNo3;
 					}; 
 				};						
 
