--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckList.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckList.html
@@ -59,7 +59,7 @@
 						$checkReservationNoTd = $("<td1>").addClass('rn').text(data[index].checkReservationNo);
 						$checkStatusTd = $("<td>").text(data[index].checkStatus);
 						$checkUserNameTd = $("<td>").text(data[index].customerName);
-						$checkEmployeeNameTd = $("<td>").text(data[index].employeeName);
+						$checkEmployeeNameTd = $("<td2>").addClass('en').text(data[index].employeeName);
 						$checkAdminNameTd = $("<td>").text(data[index].adminName);
 						$buttonTd = $("<button></button>").addClass('btn').addClass([index]).append("상세보기");
 						
@@ -90,8 +90,12 @@
 						const resNo1 = document.querySelectorAll('table#taskInfo tbody tr td1');
 						const resNo2 = resNo1[i];
 						var resNo3 = resNo2.parentNode.querySelector('.rn').innerText;
+
+						const enNo1 = document.querySelectorAll('table#taskInfo tbody tr td2');
+						const enNo2 = resNo1[i];
+						var enNo3 = resNo2.parentNode.querySelector('.en').innerText;
 						
- 					 	location.href="/admin/checklist/denialselectDetails?re="+ resNo3; 
+ 					 	location.href="/admin/checklist/denialselectDetails?re="+ resNo3 + "&en=" + enNo3; 
 							
 					}; 
 				};						
